sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Vertical__mdt/SFDC_Industry_Vertical__mdt.object-meta.xml
<CustomObject>
    <description>Salesforce industry specific verticals available for running transition assessments and upgrade automation</description>
    <label>SFDC Industry Vertical</label>
    <pluralLabel>SFDC Industry Vertical</pluralLabel>
</CustomObject>