sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Vertical__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>