sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Vertical__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>