sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Vertical__mdt/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <referenceTo>SFDC_Industry__mdt</referenceTo>
    <relationshipLabel>SFDC Industry Vertical</relationshipLabel>
    <relationshipName>SFDC_Industry_Vertical</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>