sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Industry_Vertical__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Industry__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Display_Label__c</columns>
    <columns>Description_Label__c</columns>
    <columns>Icon_Name__c</columns>
    <columns>Field__c</columns>
    <columns>Value__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>